--- a/config/sync/block.block.epost_bootstrap_subtheme_account_menu.yml
+++ b/config/sync/block.block.epost_bootstrap_subtheme_account_menu.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: gmxYWWHmgbe0Pnv8y48ZLSLH5mEHejOjAP6RLxUfdzU
 id: epost_bootstrap_subtheme_account_menu
 theme: epost_bootstrap_subtheme
-region: secondary_menu
-weight: -4
+region: navigation
+weight: -7
 provider: null
 plugin: 'system_menu_block:account'
 settings:
