--- a/config/sync/block.block.epost_bootstrap_subtheme_main_menu.yml
+++ b/config/sync/block.block.epost_bootstrap_subtheme_main_menu.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: KWAiziL39uEzmOJEql_wbUP2RtqGceL3WM2CfxhMelE
 id: epost_bootstrap_subtheme_main_menu
 theme: epost_bootstrap_subtheme
-region: primary_menu
-weight: 0
+region: navigation
+weight: -6
 provider: null
 plugin: 'system_menu_block:main'
 settings:
