--- a/config/sync/block.block.epost_bootstrap_subtheme_powered.yml
+++ b/config/sync/block.block.epost_bootstrap_subtheme_powered.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: eYL19CLDyinGTWYQfBD1DswWzglEotE_kHnHx3AxTXM
 id: epost_bootstrap_subtheme_powered
 theme: epost_bootstrap_subtheme
-region: header
-weight: 0
+region: footer
+weight: -7
 provider: null
 plugin: system_powered_by_block
 settings:
