--- a/config/sync/block.block.epost_bootstrap_subtheme_primary_admin_actions.yml
+++ b/config/sync/block.block.epost_bootstrap_subtheme_primary_admin_actions.yml
@@ -8,8 +8,8 @@ _core:
   default_config_hash: Q9_2whdOj1YIomfvsIfopROW4FT_X5pY0DjdOiOaQ5U
 id: epost_bootstrap_subtheme_primary_admin_actions
 theme: epost_bootstrap_subtheme
-region: highlighted
-weight: -5
+region: header
+weight: -3
 provider: null
 plugin: local_actions_block
 settings:
