--- a/config/sync/block.block.epost_bootstrap_subtheme_primary_local_tasks.yml
+++ b/config/sync/block.block.epost_bootstrap_subtheme_primary_local_tasks.yml
@@ -8,7 +8,7 @@ _core:
   default_config_hash: nGE3EoPQQaQCuqTUtZgw0-KIzmrqdKDzdNQf2JyPUt4
 id: epost_bootstrap_subtheme_primary_local_tasks
 theme: epost_bootstrap_subtheme
-region: highlighted
+region: header
 weight: -4
 provider: null
 plugin: local_tasks_block
