--- a/config/sync/block.block.epost_bootstrap_subtheme_search_form_narrow.yml
+++ b/config/sync/block.block.epost_bootstrap_subtheme_search_form_narrow.yml
@@ -1,6 +1,6 @@
 uuid: 4d18f10d-efc5-4bf9-bf0b-4ee50948d6da
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search
@@ -10,7 +10,7 @@ _core:
   default_config_hash: yEBET0cqDbk8dkWzaJw-8CKft0961VBflsISoSR6Lj8
 id: epost_bootstrap_subtheme_search_form_narrow
 theme: epost_bootstrap_subtheme
-region: primary_menu
+region: navigation
 weight: -4
 provider: null
 plugin: search_form_block
