--- a/config/sync/block.block.epost_bootstrap_subtheme_site_branding.yml
+++ b/config/sync/block.block.epost_bootstrap_subtheme_site_branding.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: n_nlgjggHVfQt2H__zvLOKB2YtjPDbQ5tHijF9LE1aM
 id: epost_bootstrap_subtheme_site_branding
 theme: epost_bootstrap_subtheme
-region: header
-weight: 0
+region: navigation
+weight: -3
 provider: null
 plugin: system_branding_block
 settings:
