--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: a58d8245-8df7-4498-b96b-66d2ebf088d6
-name: 'Drush Site-Install'
+name: epostnews.in
 mail: admin@example.com
 slogan: ''
 page:
